# backer

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: integration.yml
backer/: __init__.py  archive.py  cli.py  config.py  cycle.py  main.py
docs/source/: conf.py  index.rst
docs/source/development/: archive.rst  index.rst
docs/source/guides/: index.rst  quickstart.rst
tests/: __init__.py  test_archive.py  test_backer.py  test_cli.py  test_config.py  test_cycle.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_archive.py  test_cycle.py
