[tool.poetry]
name = "backer"
version = "0.1.0"
description = ""
authors = ["Lior Kummer"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
