[tool.poetry]
name = "backer"
version = "0.1.0"
description = ""
authors = ["Lior Kummer"]

[tool.poetry.scripts]
backer = 'backer.main:run'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
invoke = "^1.4.1"
black = "^19.10b0"
pydocstyle = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
