[tool.poetry]
name = "backer"
version = "0.1.0"
description = "Backup archiving with rollover in a simple CLI."
authors = ["Lior Kummer", "Amit Kummer"]
keywords = ["backup", "archive", "rollover", "rotation", "cycling"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
backer = 'backer:run'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
invoke = "^1.4.1"
black = "^19.10b0"
pydocstyle = "^5.0.2"
sphinx = "3.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
